--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="App.js" defer></script>
+
+</head>
+
+<body>
+    <header class="header">
+        <h1 class="header-title">Movie Deck</h1>
+    </header>
+    <section class="moviesearchSection">
+        <form movieSearchBar>
+            <input type="text" placeholder="Search By Name...">
+            <button type="submit">Search</button>
+        </form>
+        <div>
+            <button class="sort-by-date">Sort by date(oldesst to letest)</button>
+            <button class="sort-by-rating">Sort by rating(least to most)</button>
+        </div>
+
+    </section>
+    <section class="movieDisplaySection">
+        <div class="movieCustmizationbuttons">
+            <button>All</button>
+            <button>Favorites</button>
+        </div>
+        <section class="movieListing">
+          
+        </section>
+    </section>
+    <section class="footer-next-prev-section">
+        <button class="previous-btn">Previous</button>
+        <button class="current-btn">Current Page</button>
+        <button class="next-btn">Next</button>
+    </section>
+
+</body>
+
+</html>
